--- a/MobiTme.Web/Web.config
+++ b/MobiTme.Web/Web.config
@@ -17,4 +17,12 @@
 
     <add name="MobiTimeCon" connectionString="server=41.76.209.156\mars;database=mobitime_mobitime;uid=mobitime_T1meM0b1;password=E586E032!74F6#;"/>
   </connectionStrings>
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear/>
+        <add value="Index.aspx"/>
+      </files>
+    </defaultDocument>
+  </system.webServer>
 </configuration>
