--- a/MobiTme.Web/MobiTime.csproj
+++ b/MobiTme.Web/MobiTime.csproj
@@ -232,7 +232,9 @@
     <Content Include="Styles\Images\welcome.png" />
     <Content Include="Styles\Login.css" />
     <Content Include="Styles\MetroMenu.css" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Scripts\jquery-2.0.3.min.map" />
     <Content Include="Scripts\jquery.mobile\jquery.mobile-1.3.2.min.map" />
   </ItemGroup>
