--- a/MobiTme.Web/Web.config
+++ b/MobiTme.Web/Web.config
@@ -13,9 +13,9 @@
   <connectionStrings>
     <!--<add name="EPWPConnection" connectionString="server=localhost;database=EPWP;uid=myUser;password=myPass;" /> -->
     <!--<add name="EPWPConnection" connectionString="server=localhost;database=EPWP;Trusted_Connection=Yes;"/>-->
-    <add name="MobiTimeCon" connectionString="server=.\PowerUpLocal;database=MobiTime;Trusted_Connection=Yes;"/>
+    <!--<add name="MobiTimeCon" connectionString="server=.\PowerUpLocal;database=MobiTime;Trusted_Connection=Yes;"/>-->
 
-   <!-- <add name="MobiTimeCon" connectionString="server=41.76.209.156\mars;database=mobitime_mobitime;uid=mobitime_T1meM0b1;password=E586E032!74F6#;"/>-->
+     <add name="MobiTimeCon" connectionString="server=41.76.209.156\mars;database=mobitime_mobitime;uid=mobitime_T1meM0b1;password=E586E032!74F6#;"/>
   </connectionStrings>
   <system.webServer>
     <defaultDocument>
