--- a/MobiTme.Web/MobiTime.csproj
+++ b/MobiTme.Web/MobiTime.csproj
@@ -152,6 +152,8 @@
     <Content Include="Scripts\jquery.blockUI.js" />
     <Content Include="Scripts\jquery.blockUI.min.js" />
     <Content Include="Scripts\jquery.layout-latest.js" />
+    <Content Include="Scripts\jquery.number.js" />
+    <Content Include="Scripts\jquery.number.min.js" />
     <Content Include="Scripts\jquery.timepicker\jquery-ui-sliderAccess.js" />
     <Content Include="Scripts\jquery.timepicker\jquery-ui-timepicker-addon.css" />
     <Content Include="Scripts\jquery.timepicker\jquery-ui-timepicker-addon.js" />
